rollback some bad changes - program now works again

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <script src="example.js"></script>
   </head>
   <body>
+
+<!--     <form id="numberentries">
+      <input type="number" id="diameter">
+      <input type="number" name="teethcount">
+    </form> -->
+
   </body>
 </html>
