more getters and setters, more sliders, HTML buttons, new default gear and more

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   </head>
   <body>
 
-<!--     <form id="numberentries">
-      <input type="number" id="diameter">
-      <input type="number" name="teethcount">
-    </form> -->
+    <form id="buttons">
+      <!-- <input type="number" id="diameter">
+      <input type="number" name="teethcount"> -->
+      <input type="button" id="reset" value="Reset values to default" style="width:300px;">
+      <input type="button" id="dir" value="Change spinning direction" style="width:300px;">   
+    </form>
 
   </body>
 </html>
