--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <style> body {padding: 0; margin: 0;} </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
-    <script src="sketch.js"></script>
-    <script src="example.js"></script>
+    <script src="gears.js"></script>
+    <script src="index.js"></script>
   </head>
   <body>
 
